# nexus

./: .gitignore  AUDIT_COMPLET_HIDDENPROJECT.md  PLAN_CENTRALISATION_APP.txt  PORTFOLIO_FEATURES.md  PORTFOLIO_UPDATE.md  RAPPORT_VIE_APP.txt  README.md  analyse_ecarts.txt  architecture_core.txt  audit_14_03_2026.txt  cartographie_app_complete.txt  docker-compose.yml  documentation_bdd.txt  documentation_securite_permissions.txt  extracted_helpers.txt  fix_models.js  fix_models.py  generate_real_audit.py  generation_documents_pdf.txt  git_commit_msg.txt  inventaire_services_models.txt  inventaire_utils_config.txt  parcours_administrateur.txt  parcours_commission.txt  parcours_enseignant.txt  parcours_etudiant.txt  parcours_scolarite.txt  patch_api.sh  patch_db.sh  patch_models.sh  project_structure.txt  test.md  workflow_soutenance.txt
.openclaw/: workspace-state.json
PRD/: PRD-01_architecture_backend_mvc.txt  PRD-02_socle_di_routage_controllers.txt  PRD-03_couche_donnees_repository.txt  PRD-04_validation_normalisation_donnees.txt  (+7 more)
backend/: Cargo.toml  Dockerfile  fix_projects.js  fix_projects_2.js  fix_projects_3.js
backend/migrations/: 20240318000000_init.sql
backend/src/: lib.rs  main.rs
backend/src/api/: admin.rs  auth.rs  blocks.rs  collections.rs  health.rs  media.rs  mod.rs  pages.rs  projects.rs  system.rs
backend/src/db/: mod.rs
backend/src/middleware/: mod.rs  rate_limit.rs  security.rs
backend/src/models/: mod.rs
backend/src/services/: app_state.rs  auth.rs  config.rs  mod.rs
backend/src/utils/: error.rs  mod.rs  response.rs
(+52 files in other folders)
